--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,4 +12,6 @@
  *
  *= require_tree .
  *= require_self
+ *= require font-awesome
  */
+ @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700);
