--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -1,2 +1,46 @@
-<h1>Pages#projects</h1>
-<p>Find me in app/views/pages/projects.html.erb</p>
+<h3>
+  <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true">
+    <span class="octicon octicon-link"></span>
+  </a>
+  <a class="project-title" href="http://jamconnect.org/">
+    Jam Connect
+  </a>
+</h3>
+
+<a href="http://jamconnect.org/">
+  <%= image_tag 'jam_connect.png', id: 'jam-connect' %>
+</a>
+
+<p>
+  Jam Connect is about connecting musicians together based on what matters most: the music.
+</p>
+<p>
+  Technologies:
+</p>
+<div class="triplets">
+  <li><a href="http://rubyonrails.org/" class="pop">Ruby on Rails</a></li>
+  <li><a href="https://en.wikipedia.org/wiki/JavaScript" class="pop">JavaScript</a></li>
+  <li><a href="https://jquery.com/" class="pop">jQuery</a></li>
+</div>
+<div class="triplets">
+  <li><a href="http://parsleyjs.org/" class="pop">parsley.js</a></li>
+  <li><a href="http://radio.uxder.com/" class="pop">radio.js</a></li>
+  <li><a href="http://d3js.org/" class="pop">D3.js</a></li>
+</div>
+<div class="triplets">
+  <li><a href="http://fortawesome.github.io/Font-Awesome/" class="pop">Font Awesome</a></li>
+  <li><a href="http://aws.amazon.com/s3/" class="pop">AWS S3</a></li>
+</div>
+<p>
+  <a href="https://github.com/MusiciansToolbox/musician_toolbox" class="pop">
+    <i class="fa fa-github-square fa-lg project-icon"></i>
+    Github Repo
+  </a>
+</p>
+<p>
+  Want to see something cool? After
+  <a href="http://jamconnect.org/users/new" class="pop blue">creating a profile</a>,
+  in the
+  <a href="http://jamconnect.org/" class="pop blue">home page</a>,
+  type in "← → a q f r ↑ ↓ ← →" in that order.
+</p>
