--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,14 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<%= image_tag 'cruz.jpg' %>
+
+<h3>
+  <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true">
+    <span class="octicon octicon-link"></span>
+  </a>
+  About Me
+</h3>
+
+<p>
+  Hey, I'm Cruz. I'm a Ruby on Rails graduate from The Iron Yard in Durham, NC. I'm currently searching for a position in the Triangle Area to develop my skills as a programmer. I
+  <code><a href="https://github.com/cruznunez">commit</a></code>
+  to producing high-quality and meaningful work. Besides coding, I like listening to music, gaming, lifting weights, and going out to eat. If you're interested in any of these, contact me!
+</p>
