Make homepage image smaller

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<%= image_tag 'cruz.jpg' %>
+<%= image_tag 'cruz.jpg', id: "self" %>
 
 <h3>
   <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true">
