--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -1,5 +1,5 @@
 <div class="resume-container">
-  <a id="download-resume" href=<%= asset_url('resume_cruz_nunez.pdf') %> download>
+  <a id="download-resume" href='resume_cruz_nunez.pdf' download>
     <div class="icon">
       <i class="fa fa-download"></i>
     </div>
