--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -8,7 +8,7 @@
 </h3>
 
 <a href="http://jamconnect.org/">
-  <%= image_tag 'jam_connect.png', id: 'jam-connect' %>
+  <%= image_tag 'jam_connect.png', id: 'jam-connect', class: 'shadow'%>
 </a>
 
 <p>
@@ -25,7 +25,7 @@
 <div class="triplets">
   <li><a href="http://parsleyjs.org/" class="pop">parsley.js</a></li>
   <li><a href="http://radio.uxder.com/" class="pop">radio.js</a></li>
-  <li><a href="http://d3js.org/" class="pop">D3.js</a></li>
+  <li><a href="http://bl.ocks.org/mbostock/4339083" class="pop">D3.js Tree Layout</a></li>
 </div>
 <div class="triplets">
   <li><a href="http://fortawesome.github.io/Font-Awesome/" class="pop">Font Awesome</a></li>
@@ -43,4 +43,46 @@
   in the
   <a href="http://jamconnect.org/" class="pop blue">home page</a>,
   type in "← → a q f r ↑ ↓ ← →" in that order.
+</p>
+
+<h3>
+  <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true">
+    <span class="octicon octicon-link"></span>
+  </a>
+  <a class="project-title" href="https://drive-or-flight.herokuapp.com/">
+    Drive or Flight
+  </a>
+</h3>
+
+<a href="https://drive-or-flight.herokuapp.com/">
+  <%= image_tag 'drive_or_flight_1.png', id: 'drive-or-flight', class: 'shadow' %>
+</a>
+
+<p>
+  Drive or Flight uses three separate APIs to create a cost summary for any trip in the US.
+  <br/>
+  We were also told to add some D3 visualization for the first time, so I added the rainbow worm.
+</p>
+<p>
+  Technologies:
+</p>
+<div class="triplets">
+  <li><a href="http://rubyonrails.org/" class="pop">Ruby on Rails</a></li>
+  <li><a href="https://en.wikipedia.org/wiki/JavaScript" class="pop">JavaScript</a></li>
+  <li><a href="http://bl.ocks.org/mbostock/4165404" class="pop">D3.js Rainbow Worm</a></li>
+</div>
+<div class="triplets">
+  <li><a href="https://developers.google.com/maps/documentation/directions/intro" class="pop">Google Directions API</a></li>
+  <li><a href="https://developers.google.com/qpx-express/" class="pop">QPX Express API</a></li>
+  <li><a href="http://www.fueleconomy.gov/feg/ws/#fuelprices" class="pop">Fuel Economy API</a></li>
+</div>
+<div class="triplets">
+  <li><a href="https://github.com/jnunemaker/httparty" class="pop">HTTParty</a></li>
+  <li><a href="https://github.com/sporkmonger/addressable" class="pop">Addressable</a></li>
+</div>
+<p>
+  <a href="https://github.com/cj-novel-api/novel_api" class="pop">
+    <i class="fa fa-github-square fa-lg project-icon"></i>
+    Github Repo
+  </a>
 </p>
