Add more images for jam connect"

--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -8,7 +8,7 @@
 </h3>
 
 <a href="http://jamconnect.org/">
-  <%= image_tag 'jam_connect.png', id: 'jam-connect', class: 'shadow'%>
+  <%= image_tag 'jam_connect_1.png', id: 'jam-connect', class: 'shadow'%>
 </a>
 
 <p>
