Add jquery ui to Jam Connect

--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -21,17 +21,18 @@
   <li><a href="http://rubyonrails.org/" class="pop">Ruby on Rails</a></li>
   <li><a href="https://en.wikipedia.org/wiki/JavaScript" class="pop">JavaScript</a></li>
   <li><a href="https://jquery.com/" class="pop">jQuery</a></li>
+  <li><a href="http://jqueryui.com/" class="pop">jQuery UI</a></li>
   <li><a href="https://github.com/codahale/bcrypt-ruby" class="pop">Bcrypt</a></li>
-  <li><a href="https://github.com/thoughtbot/paperclip" class="pop">Paperclip</a></li>
 </div>
 <div class="triplets">
+  <li><a href="https://github.com/thoughtbot/paperclip" class="pop">Paperclip</a></li>
   <li><a href="https://transloadit.com/" class="pop">Transloadit</a></li>
   <li><a href="http://fortawesome.github.io/Font-Awesome/" class="pop">Font Awesome</a></li>
   <li><a href="http://aws.amazon.com/s3/" class="pop">AWS S3</a></li>
   <li><a href="https://github.com/jnunemaker/httparty" class="pop">HTTParty</a></li>
-  <li><a href="http://www.zipwise.com/data/" class="pop">Zipwise API</a></li>
 </div>
 <div class="triplets">
+  <li><a href="http://www.zipwise.com/data/" class="pop">Zipwise API</a></li>
   <li><a href="http://touchpunch.furf.com/" class="pop">Touch Punch</a></li>
   <li><a href="http://parsleyjs.org/" class="pop">parsley.js</a></li>
   <li><a href="http://radio.uxder.com/" class="pop">radio.js</a></li>
