--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,11 +1,8 @@
-a.stretch{
+a.white-underline {
   color: inherit;
-  transition: letter-spacing .3s, text-shadow .3s;
 }
-a.stretch:hover {
-  text-decoration: none;
-  letter-spacing: 1px;
-  text-shadow: 1px 1px 0 black;
+a.white-underline:hover {
+  border-bottom: 1.5px solid #fff;
 }
 div.container-white {
   position: absolute;
@@ -33,6 +30,7 @@ div.container span:last-child {
   text-align: right;
 }
 .project-name {
+  // padding-top: 8px;
   margin: 0;
 }
 @media screen and (min-width: 64em) {
@@ -52,6 +50,7 @@ div.container span:last-child {
 }
 .project-tagline {
   margin-top: 0;
+  // margin-bottom: 2.5rem;
   margin-bottom: 2rem;
   font-weight: normal;
   opacity: 0.75;
@@ -74,11 +73,11 @@ div.container span:last-child {
 .page-header {
   color: #fff;
   text-align: center;
-  background: #0000CD;
+  background: #2222CD;
 }
 @media screen and (min-width: 64em) {
   .page-header {
-    padding: 1.5% 3% 1% 3%;
+    padding: 2% 3% 1.8% 3%;
   }
 }
 @media screen and (min-width: 42em) and (max-width: 64em) {
