--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,24 +1,24 @@
 <div class="container container-black">
   <span>
-    <a href="https://www.linkedin.com/in/cruznunez" class="stretch2">
+    <a href="https://www.linkedin.com/in/cruznunez" class="black-underline">
       <i class="fa fa-linkedin-square"></i>
       Cruz A. Núñez
     </a>
   </span>
   <span>
-    <a href="https://github.com/cruznunez" class="stretch2">
+    <a href="https://github.com/cruznunez" class="black-underline">
       <i class="fa fa-github-square"></i>
       cruznunez
     </a>
   </span>
   <span>
-    <a href="mailto:nunez.a.cruz@gmail.com" class="stretch2 email">
+    <a href="mailto:nunez.a.cruz@gmail.com" class="black-underline email">
       <i class="fa fa-envelope"></i>
       nunez.a.cruz@gmail.com
     </a>
   </span>
   <span>
-    <a href="tel:919-593-2828" class="stretch2 phone">
+    <a href="tel:919-593-2828" class="black-underline phone">
       <i class="fa fa-phone"></i>
       (919) 593 2828
     </a>
