--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,25 +10,25 @@
 </section>
 <div class="container container-white">
   <span>
-    <a href="https://www.linkedin.com/in/cruznunez" class="stretch">
+    <a href="https://www.linkedin.com/in/cruznunez" class="white-underline">
       <i class="fa fa-linkedin-square"></i>
       Cruz A. Núñez
     </a>
   </span>
   <span>
-    <a href="https://github.com/cruznunez" class="stretch">
+    <a href="https://github.com/cruznunez" class="white-underline">
       <i class="fa fa-github-square"></i>
       cruznunez
     </a>
   </span>
   <span>
-    <a href="mailto:nunez.a.cruz@gmail.com" class="stretch email">
+    <a href="mailto:nunez.a.cruz@gmail.com" class="white-underline email">
       <i class="fa fa-envelope"></i>
       nunez.a.cruz@gmail.com
     </a>
   </span>
   <span>
-    <a href="tel:919-593-2828" class="stretch phone">
+    <a href="tel:919-593-2828" class="white-underline phone">
       <i class="fa fa-phone"></i>
       (919) 593 2828
     </a>
