--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,5 +10,6 @@
 <p>
   Hey, I'm Cruz. I'm a Ruby on Rails graduate from The Iron Yard in Durham, NC. I'm currently searching for a position in the Triangle Area to develop my skills as a programmer. I
   <code><a href="https://github.com/cruznunez">commit</a></code>
-  to producing high-quality and meaningful work. Besides coding, I like listening to music, gaming, lifting weights, and going out to eat. If you're interested in any of these, contact me!
+  to producing high-quality and meaningful work. Besides coding, I like listening to music, gaming, lifting weights, and going out to eat. If you're interested in any of these,
+  <code><a href="mailto:nunez.a.cruz@gmail.com">contact me!</a></code>
 </p>
