--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -66,7 +66,7 @@
 </a>
 
 <p>
-  Drive or Flight uses three separate APIs to create a cost summary for any trip in the US.
+  Drive or Flight uses three separate APIs to create a cost summary for any trip in the US and helps you decide between either flying or driving there.
   <br/>
   We were also told to add some D3 visualization for the first time, so I added the rainbow worm.
 </p>
