--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -1,11 +1,13 @@
 div.container-black {
+  border-top: 2px solid rgba(0, 0, 0, .25);
   position: absolute;
   background: white;
   color: black;
-  padding: 10px;
+  padding: 15px 5%;
   z-index: 1;
 }
 a.black-underline {
+  font-size: 18px;
   color: inherit;
 }
 a.black-underline:hover {
