Add Live Site links

--- a/app/assets/stylesheets/defaults.scss
+++ b/app/assets/stylesheets/defaults.scss
@@ -156,7 +156,7 @@ a:hover {
 }
 body {
   padding: 0;
-  padding-bottom: 30px;
+  padding-bottom: 4em;
   margin: 0;
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
