--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -38,12 +38,22 @@
   <li><a href="http://radio.uxder.com/" class="pop">radio.js</a></li>
   <li><a href="http://bl.ocks.org/mbostock/4339083" class="pop">D3.js Tree Layout</a></li>
 </div>
-<p>
-  <a href="https://github.com/MusiciansToolbox/musician_toolbox" class="pop">
-    <i class="fa fa-github-square fa-lg project-icon"></i>
-    Github Repo
-  </a>
-</p>
+<div class="twins">
+  <p>
+    <a href="https://github.com/MusiciansToolbox/musician_toolbox" class="pop">
+      <i class="fa fa-hand-o-up fa-lg project-icon"></i>
+      Live Site
+    </a>
+  </p>
+</div>
+<div class="twins">
+  <p>
+    <a href="https://github.com/MusiciansToolbox/musician_toolbox" class="pop">
+      <i class="fa fa-github-square fa-lg project-icon"></i>
+      Github Repo
+    </a>
+  </p>
+</div>
 <p>
   Want to see something cool? After
   <a href="http://jamconnect.org/users/new" class="pop blue">creating a profile</a>,
@@ -87,9 +97,20 @@
   <li><a href="https://github.com/jnunemaker/httparty" class="pop">HTTParty</a></li>
   <li><a href="https://github.com/sporkmonger/addressable" class="pop">Addressable</a></li>
 </div>
-<p>
-  <a href="https://github.com/cj-novel-api/novel_api" class="pop">
-    <i class="fa fa-github-square fa-lg project-icon"></i>
-    Github Repo
-  </a>
-</p>
+
+<div class="twins">
+  <p>
+    <a href="https://github.com/MusiciansToolbox/musician_toolbox" class="pop">
+      <i class="fa fa-hand-o-up fa-lg project-icon"></i>
+      Live Site
+    </a>
+  </p>
+</div>
+<div class="twins">
+  <p>
+    <a href="https://drive-or-flight.herokuapp.com/" class="pop">
+      <i class="fa fa-github-square fa-lg project-icon"></i>
+      Github Repo
+    </a>
+  </p>
+</div>
