Fix incorrect links

--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -40,7 +40,7 @@
 </div>
 <div class="twins">
   <p>
-    <a href="https://github.com/MusiciansToolbox/musician_toolbox" class="pop">
+    <a href="http://jamconnect.org/" class="pop">
       <i class="fa fa-hand-o-up fa-lg project-icon"></i>
       Live Site
     </a>
