--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -61,6 +61,49 @@
   <a href="http://jamconnect.org/" class="pop blue">home page</a>,
   type in "← → a q f r ↑ ↓ ← →" in that order.
 </p>
+<h3>
+  <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true">
+    <span class="octicon octicon-link"></span>
+  </a>
+  <a class="project-title" href="https://drive-or-flight.herokuapp.com/">
+    To-Do List
+  </a>
+</h3>
+
+<a href="https://agile-anchorage-4715.herokuapp.com/">
+  <%= image_tag 'to_do_list_1.png', id: 'to-do-list', class: 'shadow' %>
+</a>
+
+<p>
+  A simple app to help keep notes or reminders for yourself. You can use it as a to-do list. This was our first project using JavaScript, jQuery and aJax.
+</p>
+<p>
+  Technologies:
+</p>
+<div class="twins">
+  <li><a href="http://rubyonrails.org/" class="pop">Ruby on Rails</a></li>
+  <li><a href="https://en.wikipedia.org/wiki/JavaScript" class="pop">JavaScript</a></li>
+</div>
+<div class="twins">
+  <li><a href="https://jquery.com/" class="pop">jQuery</a></li>
+  <li><a href="http://foundation.zurb.com/" class="pop">Foundation</a></li>
+</div>
+<div class="twins">
+  <p>
+    <a href="https://agile-anchorage-4715.herokuapp.com/" class="pop">
+      <i class="fa fa-hand-o-up fa-lg project-icon"></i>
+      Live Site
+    </a>
+  </p>
+</div>
+<div class="twins">
+  <p>
+    <a href="https://github.com/John-Cruz/toDoList" class="pop">
+      <i class="fa fa-github-square fa-lg project-icon"></i>
+      Github Repo
+    </a>
+  </p>
+</div>
 
 <h3>
   <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true">
