Add pinteresting to projects

--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -1,3 +1,9 @@
+.blue-underline {
+  color: #2222CD;
+}
+.blue-underline:hover {
+  border-bottom: 1px solid #2222CD;
+}
 img#jam-connect {
 }
 .shadow {
