--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -56,10 +56,8 @@
 </div>
 <p>
   Want to see something cool? After
-  <a href="http://jamconnect.org/users/new" class="pop blue">creating a profile</a>,
-  in the
-  <a href="http://jamconnect.org/" class="pop blue">home page</a>,
-  type in "← → a q f r ↑ ↓ ← →" in that order.
+  <a href="http://jamconnect.org/users/new" class="blue-underline">creating a profile</a>,
+  in the home page, type in "← → a q f r ↑ ↓ ← →" in that order.
 </p>
 <h3>
   <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true">
@@ -152,6 +150,55 @@
 <div class="twins">
   <p>
     <a href="https://github.com/cj-novel-api/novel_api" class="pop">
+      <i class="fa fa-github-square fa-lg project-icon"></i>
+      Github Repo
+    </a>
+  </p>
+</div>
+<h3>
+  <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true">
+    <span class="octicon octicon-link"></span>
+  </a>
+  <a class="project-title" href="http://omr-pinteresting-cruz.com/">
+    Pinteresting
+  </a>
+</h3>
+
+<a href="http://omr-pinteresting-cruz.com/">
+  <%= image_tag 'pinteresting_1.png', id: 'drive-or-flight', class: 'shadow' %>
+</a>
+
+<p>
+  This is where it all started. Under
+  <%= link_to 'Code The Dream', 'http://codethedream.org/', class: 'blue-underline' %>'s
+  guidance, I entered
+  <%= link_to 'One Month Rail\'s program', 'https://onemonth.com/courses/one-month-rails', class: 'blue-underline' %>,
+  creating my own version of
+  <%= link_to 'Pinterest', 'https://www.pinterest.com/', class: 'blue-underline' %>.
+</p>
+<p>
+  Technologies:
+</p>
+<div class="twins">
+  <li><a href="http://rubyonrails.org/" class="pop">Ruby on Rails</a></li>
+  <li><a href="https://github.com/thoughtbot/paperclip" class="pop">Paperclip</a></li>
+</div>
+<div class="twins">
+  <li><a href="http://fortawesome.github.io/Font-Awesome/" class="pop">Font Awesome</a></li>
+  <li><a href="http://getbootstrap.com/" class="pop">Bootstrap</a></li>
+</div>
+
+<div class="twins">
+  <p>
+    <a href="http://omr-pinteresting-cruz.com/" class="pop">
+      <i class="fa fa-hand-o-up fa-lg project-icon"></i>
+      Live Site
+    </a>
+  </p>
+</div>
+<div class="twins">
+  <p>
+    <a href="https://github.com/cruznunez/pinteresting" class="pop">
       <i class="fa fa-github-square fa-lg project-icon"></i>
       Github Repo
     </a>
