Add Weather Report Project

--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -192,6 +192,49 @@
     </a>
   </p>
 </div>
+<h3>
+  <a class="project-title" href="http://cruz-weather-report.herokuapp.com/">
+    Cruz's Weather Report
+  </a>
+</h3>
+
+<a href="http://cruz-weather-report.herokuapp.com/">
+  <%= image_tag 'cruz_weather_report_1.png', id: 'weather-report', class: 'shadow' %>
+</a>
+<p>
+  This was our first time dealing with APIs. It tells you the weather based on zip code. I later came back and added and UI.
+</p>
+<p>
+  Technologies:
+</p>
+<div class="triplets">
+  <li><a href="http://rubyonrails.org/" class="pop">Ruby on Rails</a></li>
+  <li><a href="https://en.wikipedia.org/wiki/JavaScript" class="pop">JavaScript</a></li>
+</div>
+<div class="triplets">
+  <li><a href="http://www.wunderground.com/weather/api/d/docs?MR=1" class="pop">Weather Underground API</a></li>
+  <li><a href="https://github.com/jnunemaker/httparty" class="pop">HTTParty</a></li>
+</div>
+<div class="triplets">
+  <li><a href="http://fortawesome.github.io/Font-Awesome/" class="pop">Font Awesome</a></li>
+</div>
+
+<div class="twins">
+  <p>
+    <a href="http://cruz-weather-report.herokuapp.com/" class="pop">
+      <i class="fa fa-hand-o-up fa-lg project-icon"></i>
+      Live Site
+    </a>
+  </p>
+</div>
+<div class="twins">
+  <p>
+    <a href="https://github.com/cruznunez/api_weather_report_app" class="pop">
+      <i class="fa fa-github-square fa-lg project-icon"></i>
+      Github Repo
+    </a>
+  </p>
+</div>
 
 <h3>
   <a class="project-title" href="http://omr-pinteresting-cruz.com/">
