--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -60,7 +60,7 @@
   in the home page, type in "← → a q f r ↑ ↓ ← →" in that order.
 </p>
 <h3>
-  <a class="project-title" href="https://drive-or-flight.herokuapp.com/">
+  <a class="project-title" href="https://agile-anchorage-4715.herokuapp.com/">
     To-Do List
   </a>
 </h3>
@@ -106,7 +106,7 @@
 </h3>
 
 <a href="https://filloutthissurveypls.herokuapp.com/">
-  <%= image_tag 'opossum_1.png', id: 'jam-connect', class: 'shadow'%>
+  <%= image_tag 'opossum_1.png', id: 'survey', class: 'shadow'%>
 </a>
 
 <p>
@@ -115,17 +115,13 @@
 <p>
   Technologies:
 </p>
-<div class="triplets">
+<div class="twins">
   <li><a href="http://rubyonrails.org/" class="pop">Ruby on Rails</a></li>
   <li><a href="https://en.wikipedia.org/wiki/JavaScript" class="pop">JavaScript</a></li>
 </div>
-<div class="triplets">
+<div class="twins">
   <li><a href="https://jquery.com/" class="pop">jQuery</a></li>
-  <li><a href="http://fortawesome.github.io/Font-Awesome/" class="pop">Font Awesome</a></li>
-</div>
-<div class="triplets">
-  <li><a href="http://jqueryui.com/" class="pop">jQuery UI</a></li>
-  <li><a href="http://parsleyjs.org/" class="pop">parsley.js</a></li>
+  <li><a href="http://purecss.io/" class="pop">Pure.css</a></li>
 </div>
 <div class="twins">
   <p>
