--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -1,7 +1,7 @@
 <div class="resume-container">
   <a id="download-resume" href='resume_cruz_nunez.pdf' download>
     <div class="icon">
-      <i class="fa fa-download"></i>
+      <i class="fa fa-cloud-download"></i>
     </div>
     <%= image_tag 'resume_cruz_nunez.jpg', id: 'resume' %>
   </a>
