Add Health Tracker to projects page

--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -140,6 +140,44 @@
   </p>
 </div>
 <h3>
+  <a class="project-title" href="http://enigmatic-journey-6766.herokuapp.com/">
+    Health Tracker
+  </a>
+</h3>
+
+<a href="http://enigmatic-journey-6766.herokuapp.com/">
+  <%= image_tag 'health_tracker_1.png', id: 'survey', class: 'shadow'%>
+</a>
+
+<p>
+  Track your health, from calories consumed, to calories burned off, and total steps taken.
+</p>
+<p>
+  Technologies:
+</p>
+<div class="twins">
+  <li><a href="http://rubyonrails.org/" class="pop">Ruby on Rails</a></li>
+</div>
+<div class="twins">
+  <li><a href="http://getbootstrap.com/" class="pop">Bootstrap</a></li>
+</div>
+<div class="twins">
+  <p>
+    <a href="http://enigmatic-journey-6766.herokuapp.com/" class="pop">
+      <i class="fa fa-hand-o-up fa-lg project-icon"></i>
+      Live Site
+    </a>
+  </p>
+</div>
+<div class="twins">
+  <p>
+    <a href="https://github.com/cruz-scott/health_tracker" class="pop">
+      <i class="fa fa-github-square fa-lg project-icon"></i>
+      Github Repo
+    </a>
+  </p>
+</div>
+<h3>
   <a class="project-title" href="https://drive-or-flight.herokuapp.com/">
     Drive or Flight
   </a>
