Fix typos on projects page

--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -6,11 +6,9 @@
     Jam Connect
   </a>
 </h3>
-
 <a href="http://jamconnect.org/">
   <%= image_tag 'jam_connect_1.png', id: 'jam-connect', class: 'shadow'%>
 </a>
-
 <p>
   Jam Connect is about connecting musicians together based on what matters most: the music.
 </p>
@@ -59,18 +57,19 @@
   <a href="http://jamconnect.org/users/new" class="blue-underline">creating a profile</a>,
   in the home page, type in "← → a q f r ↑ ↓ ← →" in that order.
 </p>
+
+
+
 <h3>
   <a class="project-title" href="https://agile-anchorage-4715.herokuapp.com/">
     To-Do List
   </a>
 </h3>
-
 <a href="https://agile-anchorage-4715.herokuapp.com/">
   <%= image_tag 'to_do_list_1.png', id: 'to-do-list', class: 'shadow' %>
 </a>
-
 <p>
-  A simple app to help keep notes or reminders for yourself. You can use it as a to-do list. This was our first project using JavaScript, jQuery and aJax.
+  A simple app to help keep notes or reminders for yourself. You can use it as a to-do list. This was our first project using JavaScript, jQuery and AJAX.
 </p>
 <p>
   Technologies:
@@ -99,18 +98,19 @@
     </a>
   </p>
 </div>
+
+
+
 <h3>
   <a class="project-title" href="https://filloutthissurveypls.herokuapp.com/">
     Survey Opossum
   </a>
 </h3>
-
 <a href="https://filloutthissurveypls.herokuapp.com/">
   <%= image_tag 'opossum_1.png', id: 'survey', class: 'shadow'%>
 </a>
-
 <p>
-  Here you can create surveys for anyone to make.
+  Here you can create surveys for anyone to take.
 </p>
 <p>
   Technologies:
@@ -139,18 +139,19 @@
     </a>
   </p>
 </div>
+
+
+
 <h3>
   <a class="project-title" href="http://enigmatic-journey-6766.herokuapp.com/">
     Health Tracker
   </a>
 </h3>
-
 <a href="http://enigmatic-journey-6766.herokuapp.com/">
   <%= image_tag 'health_tracker_1.png', id: 'survey', class: 'shadow'%>
 </a>
-
 <p>
-  Track your health, from calories consumed, to calories burned off, and total steps taken.
+  Track your health, from calories consumed, to calories burned off, to total steps taken.
 </p>
 <p>
   Technologies:
@@ -177,16 +178,17 @@
     </a>
   </p>
 </div>
+
+
+
 <h3>
   <a class="project-title" href="https://drive-or-flight.herokuapp.com/">
     Drive or Flight
   </a>
 </h3>
-
 <a href="https://drive-or-flight.herokuapp.com/">
   <%= image_tag 'drive_or_flight_1.png', id: 'drive-or-flight', class: 'shadow' %>
 </a>
-
 <p>
   Drive or Flight uses three separate APIs to create a cost summary for any trip in the US and helps you decide between either flying or driving there.
   <br/>
@@ -209,7 +211,6 @@
   <li><a href="https://github.com/jnunemaker/httparty" class="pop">HTTParty</a></li>
   <li><a href="https://github.com/sporkmonger/addressable" class="pop">Addressable</a></li>
 </div>
-
 <div class="twins">
   <p>
     <a href="https://drive-or-flight.herokuapp.com/" class="pop">
@@ -226,17 +227,19 @@
     </a>
   </p>
 </div>
+
+
+
 <h3>
   <a class="project-title" href="http://cruz-weather-report.herokuapp.com/">
     Cruz's Weather Report
   </a>
 </h3>
-
 <a href="http://cruz-weather-report.herokuapp.com/">
   <%= image_tag 'cruz_weather_report_1.png', id: 'weather-report', class: 'shadow' %>
 </a>
 <p>
-  This was our first time dealing with APIs. It tells you the weather based on zip code. I later came back and added and UI.
+  This was our first time dealing with APIs. It tells you the weather based on zip code. I later came back and added a simple User Interface.
 </p>
 <p>
   Technologies:
@@ -252,7 +255,6 @@
 <div class="triplets">
   <li><a href="http://fortawesome.github.io/Font-Awesome/" class="pop">Font Awesome</a></li>
 </div>
-
 <div class="twins">
   <p>
     <a href="http://cruz-weather-report.herokuapp.com/" class="pop">
@@ -270,16 +272,16 @@
   </p>
 </div>
 
+
+
 <h3>
   <a class="project-title" href="http://omr-pinteresting-cruz.com/">
     Pinteresting
   </a>
 </h3>
-
 <a href="http://omr-pinteresting-cruz.com/">
   <%= image_tag 'pinteresting_1.png', id: 'drive-or-flight', class: 'shadow' %>
 </a>
-
 <p>
   This is where it all started. Under
   <%= link_to 'Code The Dream', 'http://codethedream.org/', class: 'blue-underline' %>'s
@@ -299,7 +301,6 @@
   <li><a href="http://fortawesome.github.io/Font-Awesome/" class="pop">Font Awesome</a></li>
   <li><a href="http://getbootstrap.com/" class="pop">Bootstrap</a></li>
 </div>
-
 <div class="twins">
   <p>
     <a href="http://omr-pinteresting-cruz.com/" class="pop">
