Add Where We DREAM

--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -1,7 +1,15 @@
 <h3>
-  <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true">
-    <span class="octicon octicon-link"></span>
+  <a class="project-title" href="javascript:void(0)">
+    COMING SOON: Where We DREAM
   </a>
+</h3>
+<p>
+  Where We DREAM will be a tool for immigrant students to use in their incredibly difficult fight for education. It will bring highly needed information about schools, scholarships, students, and sponsors to anyone with an internet connection. Stay tuned!
+</p>
+
+
+
+<h3>
   <a class="project-title" href="http://jamconnect.org/">
     Jam Connect
   </a>
